--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start:dev": "NODE_ENV=development nodemon app.js",
+    "start-server": "NODE_ENV=development node app.js",
+    "start": "NODE_ENV=production node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "socket.io": "^4.6.1",
     "uuid": "^9.0.0"
   },
