--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "helmet": "^6.0.1",
-    "socket.io": "^4.6.1",
-    "uuid": "^9.0.0"
+    "express": "4.18.2",
+    "helmet": "6.0.1",
+    "socket.io": "4.6.1",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "2.0.20"
   }
 }
