--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "4.18.2",
     "helmet": "6.0.1",
     "socket.io": "4.6.1",
+    "sqlite3": "^5.1.6",
     "uuid": "9.0.0"
   },
   "devDependencies": {
